force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/ucinn_ascendv2__Contact_Name__c.object-meta.xml
<CustomObject>
    <description>The names of the constituent.</description>
    <label>Constituent Name</label>
    <nameField>
        <label>Constituent Name ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constituent Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>