force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/Interim__c.field-meta.xml
<CustomField>
    <fullName>Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Constituent Names</relationshipLabel>
    <relationshipName>Constituent_Names</relationshipName>
    <type>Lookup</type>
</CustomField>