force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/Is_Primary_Name__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For ISUF use</description>
    <label>Is Primary Name</label>
    <type>Checkbox</type>
</CustomField>