force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/isuf_Business_Title__c.field-meta.xml
<CustomField>
    <fullName>isuf_Business_Title__c</fullName>
    <label>Business Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>