force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/Matching_Key_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Matching_Key_Value_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Key Value 1</label>
    <referenceTo>ucinn_ascendv2__Matching_Key_Value__c</referenceTo>
    <relationshipLabel>Constituent Names</relationshipLabel>
    <relationshipName>Constituent_Names</relationshipName>
    <type>Lookup</type>
</CustomField>