force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_ascendv2__Constructed_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Constructed_Name_Formula__c</fullName>
    <formula>IF(TEXT(ucinn_ascendv2__Prefix__c) = &quot;&quot;, &quot;&quot;, TEXT(ucinn_ascendv2__Prefix__c) + &quot; &quot;) +
IF(ISBLANK(ucinn_ascendv2__First_Name__c), &quot;&quot;, ucinn_ascendv2__First_Name__c + &quot; &quot;) +
IF(ISBLANK(ucinn_ascendv2__Middle_Name__c), &quot;&quot;, ucinn_ascendv2__Middle_Name__c + &quot; &quot;) +
IF(ISBLANK(ucinn_ascendv2__Last_Name__c), &quot;&quot;, ucinn_ascendv2__Last_Name__c + &quot; &quot;) +
TEXT(ucinn_ascendv2__Suffix__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constructed Name</label>
    <type>Text</type>
</CustomField>