force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_ascendv2__Contact_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Name_Auto_Number__c</fullName>
    <displayFormat>N-{0000000}</displayFormat>
    <label>Constituent Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>