force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_ascendv2__Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>