force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_ascendv2__Nickname__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Nickname__c</fullName>
    <label>Nickname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>