force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_ascendv2__Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prefix__c</fullName>
    <label>Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>1st Lt.</fullName>
            </value>
            <value>
                <fullName>2nd Lt.</fullName>
            </value>
            <value>
                <fullName>Adm.</fullName>
            </value>
            <value>
                <fullName>Amb.</fullName>
            </value>
            <value>
                <fullName>Brig.</fullName>
            </value>
            <value>
                <fullName>Brig. Gen.</fullName>
            </value>
            <value>
                <fullName>Capt.</fullName>
            </value>
            <value>
                <fullName>Chap.</fullName>
            </value>
            <value>
                <fullName>Cmdr.</fullName>
            </value>
            <value>
                <fullName>Col.</fullName>
            </value>
            <value>
                <fullName>Col. (Ret)</fullName>
            </value>
            <value>
                <fullName>Cpl.</fullName>
            </value>
            <value>
                <fullName>CPO</fullName>
            </value>
            <value>
                <fullName>Deacon</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Ensign</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Gen.</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Justice</fullName>
            </value>
            <value>
                <fullName>Lt.</fullName>
            </value>
            <value>
                <fullName>Lt. Cmdr.</fullName>
            </value>
            <value>
                <fullName>Lt. Col.</fullName>
            </value>
            <value>
                <fullName>Lt. Col. (Ret.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>