force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_ascendv2__Professional_Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Professional_Designation__c</fullName>
    <label>Professional Designation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Professional_Designations</valueSetName>
    </valueSet>
</CustomField>