force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_ascendv2__Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source__c</fullName>
    <description>Used to determine the Department or Interface that created/updated the record</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>Online Donation</fullName>
            </value>
            <value>
                <fullName>SIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>