force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_ascendv2__Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Birth Name</fullName>
            </value>
            <value>
                <fullName>Full Name</fullName>
                <label>Current/Active Name</label>
            </value>
            <value>
                <fullName>Directory</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Graduation Name</fullName>
            </value>
            <value>
                <fullName>Nickname</fullName>
            </value>
            <value>
                <fullName>Other Name</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Used to Delete a name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>