force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/fields/ucinn_portal_Original_Record__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Original_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Record</label>
    <referenceTo>ucinn_ascendv2__Contact_Name__c</referenceTo>
    <relationshipLabel>Constituent Names</relationshipLabel>
    <relationshipName>Constituent_Names</relationshipName>
    <type>Lookup</type>
</CustomField>