force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/listViews/Professional_Designation_Clean_up.listView-meta.xml
<ListView>
    <fullName>Professional_Designation_Clean_up</fullName>
    <columns>ucinn_ascendv2__Professional_Designation__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Prefix__c</columns>
    <columns>ucinn_ascendv2__First_Name__c</columns>
    <columns>ucinn_ascendv2__Middle_Name__c</columns>
    <columns>ucinn_ascendv2__Last_Name__c</columns>
    <columns>ucinn_ascendv2__Suffix__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Professional_Designation__c</field>
        <operation>equals</operation>
        <value>I</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Suffix__c</field>
        <operation>notEqual</operation>
        <value>I</value>
    </filters>
    <label>Professional Designation Clean up</label>
    <sharedTo>
        <group>Information_Management</group>
    </sharedTo>
</ListView>