force-app/main/default/objects/ucinn_ascendv2__Contact_Name__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Prefix__c</columns>
    <columns>ucinn_ascendv2__First_Name__c</columns>
    <columns>ucinn_ascendv2__Middle_Name__c</columns>
    <columns>ucinn_ascendv2__Last_Name__c</columns>
    <columns>ucinn_ascendv2__Suffix__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>